--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ resolver = "2"
 
 [workspace.dependencies]
 alloy-sol-types = "1.0"
+patched-sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", version = "0.10.8", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0"}
+unpatched-sha2 = { package = "sha2", version = "0.10.8"}
