--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 alloy-sol-types = { workspace = true }
+alloy-primitives = { workspace = true }
 sp1-zkvm = "4.2.0"
 hasher-lib = { path = "../lib" }
